[tool.poetry]
name = "1117-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests-html = "^0.10.0"
bs4 = "^0.0.1"
pandas = "^1.1.4"
sklearn = "^0.0"
flask = "^1.1.2"
flask-cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
